welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: '(' expected but identifier found.
  } else if Math.max(a,b)>20 {
            ^max1020:10: error: illegal start of simple expression
             } else return a
             ^max1020:10: error: ';' expected but 'else' found.
             } else return a
               ^max1020:12: error: Unmatched closing brace '}' ignored here
 }
 ^